# Minecraft

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  premake5.lua
.github/workflows/: cmake.yml
Minecraft/Dependencies/GLFW/: premake5.lua
Minecraft/Dependencies/Glad/: premake5.lua
Minecraft/Dependencies/Glad/include/glad/: glad.h
Minecraft/Dependencies/Glad/src/: glad.c
Minecraft/res/shaders/: GUI.frag  Lighting.frag
Minecraft/src/: AABB.cpp  AABB.h  Application.cpp  Application.h  ArrayTexture.cpp  ArrayTexture.h  Assets.h  Block.cpp  Block.h  Camera.h  Chunk.cpp  Chunk.h  ChunkMesh.cpp  ChunkMesh.h  Cow.cpp  Cow.h  Entity.cpp  Entity.h  Frustum.cpp  Frustum.h  Game.cpp  Game.h  IndexBuffer.cpp  IndexBuffer.h  Main.cpp  Mesh.cpp  Mob.cpp  Mob.h  Player.cpp  Player.h  Shader.cpp  Shader.h  TextRenderer.h  Texture.cpp  Texture.h  Timer.h  Utils.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h  (+4 more)
res/shaders/: Basic3dTex.vert  Block.frag  BlockHitbox.frag  GUI.frag  GUI.vert  Lighting.frag  Lighting.vert  Sky.vert  Sun.vert  World.frag  World.vert
src/: AABB.h  Assets.cpp  Assets.h  Camera.h  Chunk.cpp  Chunk.h  ChunkMesh.cpp  ChunkMesh.h  Cow.cpp  Cow.h  Direction.h  Entity.h  Frustum.cpp  Game.cpp  Game.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Log.h  Main.cpp  Mesh.h  Mob.h  Player.cpp  Player.h  Positions.h  Shader.cpp  TextRenderer.cpp  Texture.cpp  Timer.cpp  VertexBuffer.cpp  VertexBufferLayout.h  World.cpp  World.h  pch.h
src/Entity/: Entity.cpp  Entity.h  ItemEntity.cpp  ItemEntity.h
src/Entity/Mob/: Cow.cpp  Cow.h  Mob.cpp  Mob.h  Player.cpp  Player.h
src/Math/: Frustum.cpp  Frustum.h
src/Menu/: InventoryMenu.cpp  InventoryMenu.h  LoadingScreenMenu.cpp  LoadingScreenMenu.h  Menu.cpp  Menu.h
src/Physics/: AABB.cpp  AABB.h
src/Renderer/: ArrayTexture.cpp  ArrayTexture.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Model.h  Shader.cpp  Shader.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/Utils/: Log.h  ThreadPool.cpp  ThreadPool.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h
src/World/: World.cpp  World.h
src/World/Block/: Block.cpp  Block.h
src/World/Chunk/: Chunk.cpp  Chunk.h  ChunkMesh.cpp  ChunkMesh.h
